# L1ghts

./: .gitignore  LICENSE  README.md
api/: .env.example  Cargo.toml
api/migrations/00000000000001_credentials/: up.sql
api/migrations/00000000000002_devices/: up.sql
api/migrations/00000000000003_points/: up.sql
api/migrations/00000000000004_presets/: down.sql  up.sql
api/migrations/00000000000005_presetItems/: down.sql  up.sql
api/migrations/00000000000006_refresh/: down.sql  up.sql
api/src/: api.rs  calls.rs  connection_options.rs  db.rs  dispatcher.rs  main.rs  models.rs  schema.rs  types.rs
api/src/api/: auth.rs  devices.rs  helpers.rs  points.rs  presets.rs  setup.rs
api/src/api/helpers/: auth.rs  batcher.rs  db.rs  i2c.rs  props.rs
api/src/api/helpers/db/: points.rs
api/src/api/points/: identify.rs  single.rs
api/src/api/presets/: active.rs  points.rs
api/src/middleware/: auth.rs
containers/: docker-compose.yml
front/: .eslintrc.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
front/public/: manifest.json
front/src/: hooks.ts  index.tsx  store.ts
front/src/components/: Api.tsx
front/src/components/EditEndpoint/: EditEndpoint.tsx
front/src/components/EditPreset/: EditPreset.tsx
front/src/components/Icons/: EyeDropper.tsx  List.tsx  Pencil.tsx  Presets.tsx  Settings.tsx  Template.tsx  (+1 more)
front/src/store/: auth.ts  devices.ts  points.ts  presets.ts
front/src/style/: _components.sass  _theme.sass  index.sass
front/src/utils/: api.ts  cookies.ts  variables.ts
rpi_pico/: i2cSlave.py  main.py
(+22 files in other folders)
