[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "^0.6.3"
actix-files = "^0.6.2"
actix-web = "^4.2.1"
bcrypt = "^0.13.0"
chrono = "^0.4.22"
derive_more = "^0.99.17"
diesel = { version = "^2.0.2", features = ["chrono", "r2d2", "sqlite"] }
dotenvy = "^0.15.6"
env_logger = "^0.9.1"
futures-util = "0.3.25"
i2cdev = "0.5.1"
jsonwebtoken = "^8.1.1"
log = "^0.4.17"
serde = { version = "^1.0.145", features = ["derive"] }
serde_json = "^1.0.87"
